--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="javascript:void( window.open( 'https://form.jotform.com/243623431439455', 'blank', 'scrollbars=yes, toolbar=no, width=700, height=500' ) )" class="btn h8 rounded-0 py-2 px-lg-4 d-none d-lg-block">Appointment<i
+            <a href="https://form.jotform.com/243623431439455">Appointment<i
                     class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
