--- a/service.html
+++ b/service.html
@@ -54,7 +54,8 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://form.jotform.com/243623431439455"></i></a>
+            <a href="https://form.jotform.com/243623431439455" class="btn rounded-0 py-2 px-lg-4 d-none d-lg-block button">Appointment<i
+                class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- navbar end -->
