--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,6 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center text-uppercase mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-danger active" aria-current="page">Contact</li>
                 </ol>
             </nav>
@@ -128,3 +127,67 @@
         </div>
     </div>
     <!-- Contact End -->
+
+    <!--Footer start -->
+    <div class="container-fluid years text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="text-uppercase mb-4 h6">Get In Touch</h4>
+                    <div class="d-flex align-items-center mb-2">
+                        <div class="btn-square year flex-shrink-0 me-3">
+                            <span class="fa fa-map-marker-alt text-danger"></span>
+                        </div>
+                        <span class="text">123 Street, New York, USA</span>
+                    </div>
+                    <div class="d-flex align-items-center mb-2">
+                        <div class="btn-square year flex-shrink-0 me-3">
+                            <span class="fa fa-phone-alt text-danger"></span>
+                        </div>
+                        <span class="text">+012 345 67890</span>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <div class="btn-square year flex-shrink-0 me-3">
+                            <span class="fa fa-envelope-open text-danger"></span>
+                        </div>
+                        <span class="text">info@example.com</span>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="text-uppercase mb-4 h6">Quick Links</h4>
+                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="">Terms &amp; Condition</a>
+                    <a class="btn btn-link" href="">Support</a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="text-uppercase mb-4 h6">Newsletter</h4>
+                    <div class="position-relative mb-4">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <button type="button" class="btn button py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                    </div>
+                    <div class="d-flex pt-1 m-n1">
+                        <a class="btn btn-lg-square year text-danger m-1" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg-square year text-danger m-1" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg-square year text-danger m-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-lg-square year text-danger m-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center para text-md-start mb-3 mb-md-0">
+                        © <a class="border-bottom" href="#">Ayush Anand</a>, All Right Reserved.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-container">
+        
+    </div>
+    <!-- Footer end -->
